# kwja

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-win.yml  build.yml  lint.yml  publish.yml  release.yml  test.yml  typos.yml
configs/: base_template.yaml  char_module.debug.yaml  char_module.yaml  eval.yaml  senter_module.debug.yaml  senter_module.yaml  seq2seq_module.debug.yaml  seq2seq_module.yaml  typo_corrector.debug.yaml  typo_corrector.yaml  typo_module.debug.yaml  typo_module.yaml  word_module.debug.yaml  word_module.yaml  word_segmenter.debug.yaml  word_segmenter.yaml  word_segmentor.debug.yaml  word_segmentor.yaml
configs/callbacks/: char_module_writer.yaml  early_stopping.yaml  lr_monitor.yaml  model_checkpoint.yaml  model_summary.yaml  phrase_analysis_writer.yaml  prediction_writer.yaml  progress_bar.yaml  senter_module_writer.yaml  seq2seq_module_writer.yaml  typo_corrector_writer.yaml  typo_module_writer.yaml  word_module_writer.yaml  word_segmenter_writer.yaml
configs/datamodule/: char.yaml  char_with_ed.yaml  senter.yaml  senter_with_ed.yaml  seq2seq.yaml  seq2seq_norm.yaml  seq2seq_wo_canon.yaml  typo.yaml  word.yaml  word_kwdlc.yaml
configs/datamodule/base/: char.yaml  senter.yaml  seq2seq.yaml  typo.yaml  word.yaml
configs/datamodule/predict/: char_inference.yaml  senter_inference.yaml  seq2seq_inference.yaml  typo_inference.yaml  word_inference.yaml
configs/datamodule/test/: char_fuman.yaml  char_kwdlc.yaml  char_kyoto.yaml  char_wac.yaml  jwtd.yaml  senter_fuman.yaml  senter_kwdlc.yaml  senter_kyoto.yaml  senter_wac.yaml  seq2seq_canon.yaml  seq2seq_fuman.yaml  seq2seq_kwdlc.yaml  seq2seq_kyoto.yaml  seq2seq_norm.yaml  seq2seq_wac.yaml  word_fuman.yaml  word_kwdlc.yaml  word_kyoto.yaml  word_wac.yaml
configs/datamodule/train/: char_fuman.yaml  char_kwdlc.yaml  char_kyoto.yaml  char_kyoto_ed.yaml  char_wac.yaml  jwtd.yaml  senter_fuman.yaml  senter_kwdlc.yaml  senter_kyoto.yaml  senter_kyoto_ed.yaml  senter_wac.yaml  seq2seq_canon.yaml  seq2seq_fuman.yaml  seq2seq_kwdlc.yaml  seq2seq_kyoto.yaml  seq2seq_kyoto_ed.yaml  seq2seq_norm.yaml  seq2seq_wac.yaml  word_fuman.yaml  word_kwdlc.yaml  word_kyoto.yaml  word_kyoto_ed.yaml  word_wac.yaml
configs/datamodule/valid/: char_fuman.yaml  (+18 more)
configs/dataset/: all.yaml  char.yaml  char_dataset.yaml  jwtd.yaml  kc.yaml  kwdlc.yaml  typo.yaml  typo_dataset.yaml  word.yaml  word_dataset.yaml
configs/encoder/: base.yaml  char_deberta_base.yaml  char_deberta_large.yaml  char_deberta_tiny.yaml  char_roberta_base.yaml  char_roberta_large.yaml  seq2seq_mt5_base.yaml  seq2seq_mt5_large.yaml  seq2seq_mt5_small.yaml  seq2seq_mt5_xl.yaml  seq2seq_t5_base.yaml  seq2seq_t5_large.yaml  seq2seq_t5_small.yaml  seq2seq_t5_xl.yaml  word_deberta_base.yaml  word_deberta_large.yaml  word_deberta_tiny.yaml  word_modernbert_130m.yaml  word_modernbert_30m.yaml  word_modernbert_310m.yaml  word_modernbert_70m.yaml  word_roberta_base.yaml  word_roberta_large.yaml
configs/logger/: wandb.yaml
configs/model/: char_roberta_base.yaml  char_roberta_base_wwm.yaml  char_roberta_large.yaml  char_roberta_large_wwm.yaml  word_roberta_base.yaml  word_roberta_large.yaml
configs/module/: char.yaml  default.yaml  senter.yaml  seq2seq.yaml  typo.yaml  word.yaml
configs/optimizer/: adamw.yaml
configs/scheduler/: constant_schedule_with_warmup.yaml  cosine_schedule_with_warmup.yaml  linear_schedule_with_warmup.yaml
configs/trainer/: cpu.debug.yaml  cpu.yaml  debug.yaml  default.yaml  mps.debug.yaml  mps.yaml
configs_template/: base.local.yaml  base.yaml  debug.local.yaml  debug.yaml  evaluate.yaml  train.yaml
configs_template/callbacks/: early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml
configs_template/dataset/: kc.local.yaml  kc.yaml  kwdlc.local.yaml  kwdlc.yaml
configs_template/logger/: wandb.yaml
configs_template/model/: char_roberta.local.yaml  char_roberta.yaml  word_roberta.yaml
configs_template/module/: char.yaml  word.yaml
configs_template/optimizer/: adamw.yaml
configs_template/trainer/: debug.yaml  default.yaml
scripts/: add_features.py  add_features_to_raw_corpus.py  analyze.py  benchmark.sh  build_dataset.py  build_datasets.sh  char_analyze.py  count_rel_types.py  deploy_dev_checkpoints.sh  eval_jumanpp_knp.py  evaluate.py  predict.py  split_document.py  split_knp_by_did.py  stats.py  test.py  train.py  typo_analyze.py  view_seq2seq_results.py  view_typo_results.py  word_analyze.py
scripts/preprocessors/: preprocess_canon.py  preprocess_jumandic.py  preprocess_norm.py  preprocess_reading.py  preprocess_typo.py
src/jula/: __init__.py
src/kwja/: __init__.py  __main__.py  resource
src/ula/: __init__.py
sweep/: char_large.yaml  senter_base.yaml  word_base.yaml
tests/: conftest.py  test_cli.py  test_jula.py  test_pooling.py  test_ula.py
tests/callbacks/: test_char_module_writer.py  test_senter_module_writer.py  test_seq2seq_module_writer.py  test_typo_corrector_writer.py  test_typo_module_writer.py  test_word_module_writer.py  test_word_segmenter_writer.py
tests/cli/: sample.txt  test_cli.py
tests/evaluators/: test_char_module_metric.py  test_cohesion_scorer.py  test_dependency_parsing_metric.py  test_discourse_parsing_metric.py  test_ner_metric.py  test_phrase_analysis_metric.py  test_typo_module_metric.py  test_word_module_metric.py  test_word_segment.py  test_word_segmentation_metric.py
tests/metrics/: test_char_module_metric.py  test_cohesion_scorer.py  test_senter_module_metric.py  test_typo_module_metric.py  test_word_module_metric.py
tests/models/: test_base_module.py
tests/modules/: test_base_module.py  test_char_module.py  test_senter_module.py  test_seq2seq_module.py  test_typo_module.py  test_word_module.py
tests/utils/: test_char_normalize.py  test_loss.py  test_omegaconf.py  test_reading.py  test_reading_prediction.py  test_seq2seq_format.py  test_sub_document.py  test_word_normalization.py
(+311 files in other folders)
