[tool.poetry]
name = "kwja"
version = "2.1.1"
description = "A unified Japanese analyzer based on foundation models"
authors = [
    "Hirokazu Kiyomaru <kiyomaru@i.kyoto-u.ac.jp>",
    "Nobuhiro Ueda <ueda@nlp.i.kyoto-u.ac.jp>",
    "Kazumasa Omura <omura@nlp.i.kyoto-u.ac.jp>",
    "Takashi Kodama <kodama@nlp.i.kyoto-u.ac.jp>",
    "Yugo Murawaki <murawaki@i.kyoto-u.ac.jp>",
    "Daisuke Kawahara <dkw@waseda.jp>",
    "Sadao Kurohashi <kuro@i.kyoto-u.ac.jp>"
]
maintainers = [
    "Hirokazu Kiyomaru <kiyomaru@i.kyoto-u.ac.jp>",
    "Nobuhiro Ueda <ueda@nlp.i.kyoto-u.ac.jp>",
    "Kazumasa Omura <omura@nlp.i.kyoto-u.ac.jp>",
    "Takashi Kodama <kodama@nlp.i.kyoto-u.ac.jp>",
    "Yugo Murawaki <murawaki@i.kyoto-u.ac.jp>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ku-nlp/kwja"
keywords = ["natural language processing", "japanese"]
classifiers = [
    "Environment :: GPU",
    "Environment :: MacOS X",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]

packages = [
    { include = "kwja", from = "src" }
]
include = [
    "kwja/resource/**/*"
]
exclude = [
    "src/kwja/metrics/**/*"
]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.11,!=2.0.1"  # https://github.com/pytorch/pytorch/issues/100974
transformers = { version = "~4.28.1", extras = ["sentencepiece"]}
tokenizers = "^0.13.2"
pytorch-lightning = "~2.0.0"  # As "lightning" comes with many extra dependencies, we stay with "pytorch-lightning"
omegaconf = "^2.1"
hydra-core = "^1.2"
rhoknp = "^1.1.0"
typer = ">=0.7.0,<0.10.0"
jinf = "^1.0.4"
pure-cdb = "^4.0"
rich = ">=12.4"
pyyaml = "^6.0"
importlib-resources = { version = "^5.10", python = "<3.9" }

[tool.poetry.group.dev.dependencies]
torchmetrics = "^0.11.4"
seqeval = "^1.2"
Levenshtein = "^0.21.0"
pandas = "^2.0"
python-dotenv = "^1.0"
jaconv = "^0.3.4"
ipython = [
    { version = "~8.12.1", python = "<3.9" },
    { version = "^8.13", python = ">=3.9" },
]
ipdb = "^0.13.13"
types-attrs = "^19.1"
types-pyyaml = "^6.0.12.9"
wandb = "^0.15.0"

[tool.poetry.group.test.dependencies]
torchmetrics = "^0.11.4"
seqeval = "^1.2"
Levenshtein = "^0.21.0"
pandas = "^2.0"
jaconv = "^0.3.4"
pytest = "^7.1"
pytest-cov = "^4.0"
pytest-profiling = "^1.7"

[tool.poetry.scripts]
kwja = "kwja.cli.cli:app"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
line_length = 120
py_version = 39
profile = "black"
src_paths = ["src"]

[tool.mypy]
python_version = 3.8

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore::UserWarning',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
